24-01-01 공부 기록 추가

--- a/2024/01-06.md
+++ b/2024/01-06.md
@@ -8,10 +8,11 @@
 1월 1주차 달성 결과
 - ts 책 하루 12 페이지 이상
 
-1월 1일 한 일들
-- ts책 ~ 169p
+1월 6일 한 일들
 
-1월 4일
-- ts책 ~ 172p
+# 테이블 기록
 
+| 시간       | 한일        |
+|----------|-----------|
+| PM 1: 00 | ~175(5)   |
 
